@@ -323,16 +323,6 @@ The :param! matcher matches if the given parameter is present and not empty.
   :param! => "user" matches "/foo?user=bar"
   :param! => "user" does not matches "/foo", "/foo?user="
 
-==== :term
-
-The :term matcher matches if true and there are no segments left.  This matcher is
-added by +r.is+ to ensure an exact path match.
-
-  :term => true matches ""
-  :term => true does not match "/"
-  :term => false matches "/"
-  :term => false does not match ""
-
 === false, nil
 
 If false or nil is given directly as a matcher, it doesn't match anything.
